--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.11"
 python-dotenv = "^1.0.0"
+openai = {extras = ["embeddings", "wandb"], version = "^0.28.1"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
