added google palm test case

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ license = "MIT"
 python = "^3.11"
 python-dotenv = "^1.0.0"
 openai = {extras = ["embeddings", "wandb"], version = "^0.28.1"}
+google-generativeai = "^0.2.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
