--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.11"
 python-dotenv = "^1.0.0"
-openai = {extras = ["embeddings", "wandb"], version = "^0.28.1"}
+openai = {version = "1.2.0", extras = ["embeddings", "wandb"]}
 google-generativeai = "^0.2.1"
 
 [build-system]
