--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ google-generativeai = "^0.2.1"
 xgboost = "^2.0.2"
 pandas = "1.5.3"
 scikit-learn = "^1.3.2"
+jieba = "^0.42.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -38,6 +39,7 @@ types-setuptools = "^57.4.8"
 types-toml = "^0.10.3"
 isort = "^5.12.0"
 pre-commit = "^3.3.3"
+pandas-stubs = "1.5.3.230321"
 
 [tool.black]
 line-length = 120
@@ -49,6 +51,10 @@ profile = "black"
 minversion = "6.0"
 testpaths = [
     "tests",
+]
+filterwarnings = [
+    "ignore::DeprecationWarning",
+    "ignore::UserWarning",
 ]
 
 [tool.coverage.run]
@@ -69,5 +75,12 @@ mypy_path = "."
 [[tool.mypy.overrides]]
 module = [
     "dataclasses",
+    "jieba",
+    "sklearn.feature_extraction.text",
+    "sklearn.impute",
+    "sklearn.metrics",
+    "sklearn.model_selection",
+    "sklearn.preprocessing",
+
 ]
 ignore_missing_imports = true
