--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ xgboost = "^2.0.2"
 pandas = "1.5.3"
 scikit-learn = "^1.3.2"
 jieba = "^0.42.1"
+tenacity = "^8.2.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
