--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ scikit-learn = "^1.3.2"
 jieba = "^0.42.1"
 tenacity = "^8.2.3"
 openpyxl = "^3.1.2"
+redis = "^5.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
