--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ scikit-learn = "^1.3.2"
 jieba = "^0.42.1"
 tenacity = "^8.2.3"
 openpyxl = "^3.1.2"
+tabulate = "^0.9.0"
+wcwidth = "^0.2.10"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
