--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ types-toml = "^0.10.3"
 isort = "^5.12.0"
 pre-commit = "^3.3.3"
 pandas-stubs = "1.5.3.230321"
+types-tabulate = "^0.9.0.3"
 
 [tool.black]
 line-length = 120
@@ -85,6 +86,8 @@ module = [
     "sklearn.metrics",
     "sklearn.model_selection",
     "sklearn.preprocessing",
-
+    "sklearn.pipeline",
+    "sklearn.base",
+    "joblib",
 ]
 ignore_missing_imports = true
