--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ tenacity = "^8.2.3"
 openpyxl = "^3.1.2"
 tabulate = "^0.9.0"
 wcwidth = "^0.2.10"
+numpy = "1.25.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
