--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,12 +9,17 @@ repos:
   - id: check-toml
 
 - repo: https://github.com/python-poetry/poetry
-  rev: "1.5.1"
+  rev: "1.6.1"
   hooks:
   - id: poetry-check
   - id: poetry-lock
     args:
     - --no-update
+  - id: poetry-export
+    args: ["-f", "requirements.txt", "-o", "requirements.txt", "--without-hashes"]
+  - id: poetry-export
+    args: ["--with", "dev", "-f", "requirements.txt", "-o", "requirements-dev.txt", "--without-hashes"]
+
 
 - repo: local
   hooks:
